--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit existion article</h1>
 <% if @article.errors.any? %>
 <h2>The following error prevented the article from being created</h2>
   <ul>
@@ -23,5 +23,4 @@
   </p>
 
 <% end %>
-
 <%= link_to "Back to articles listing", articles_path %>
