Add partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,4 +9,4 @@
 
 <p>Learn something new today!</p>
 
-<%= link_to "About", about_path %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
