--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,4 @@
-<h1>This is my homework home page</h1>
-
-<p>Taking udemy classes is fun</p>
-<ul>
-  <li>A little review never hurt anyone</li>
-  <li>The more skills you have, the better</li>
-  <li>It is more fun than reading programming books</li>
-</ul>
-
-<p>Learn something new today!</p>
-
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg"%>
+</div>
