--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,6 +68,15 @@ footer {
   padding-bottom: 15px;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
+.center {
+  align: center;
+}
+
 footer a:hover {
   color: #222;
 }
