--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -33,7 +33,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "All Categories", new_article_path %></li>
+            <li><%= link_to "All Categories", categories_path %></li>
             <% Category.all.each do |category| %>
               <li><%= link_to "#{category.name}", category_path(category) %></li>
             <% end %>
